--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,26 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EG</title>
-    <link rel="STYLESHEET" href="estilos.css">
+    <link rel="STYLESHEET" href="cocina de juan/lA-COCINADEJUAN/css/style.css">
 </head>
 
-<body style="background-color: #faebd7;">
-    <header style="background-color:orangered;"> 
+<body >
+    <header > 
         <h1 align="center"><u> ¨EG¨ La escuela gastronomica</u></h1>
     <nav>
-        <a style="background-color:salmon" href="INDEX.HTML">Home</a>
-        <a style="background-color:salmon" href="ACERCADE.HTML">Acerca de</a>
-        <a style="background-color:salmon" href="CONTACTO.HTML">Contacto</a>
-        <a style="background-color:salmon" href="REGISTRESE.HTML">REGISTRESE</a>
-        <a style="background-color:salmon" href="SUCURSALES.HTML">SUCURSALES</a>
+        <a  href="INDEX.HTML">Home</a>
+        <a  href="ACERCADE.HTML">Acerca de</a>
+        <a  href="CONTACTO.HTML">Contacto</a>
+        <a  href="REGISTRESE.HTML">REGISTRESE</a>
+        <a  href="SUCURSALES.HTML">SUCURSALES</a>
     </nav>
 </header>
     <br><br>
     <a href="RECETA.HTML"><i>RECETA DE FLAN</i></a>
     <br>
-    <p align="center"> <img src="img/flan png.jpg" alt="la mejor receta" width="300"
+    <p align="center"> <img src="img/flan png.jpg" alt="la mejor receta" width="300">
 </body>
-<footer style="background-color:orangered;">
+<footer>
     <br>
     <p align="center">Derechos reservados @2020</p>
     <br>
